# Drivetrain-python

./: .gitignore  CONTRIBUTING.md  Drivetrain.py  Gear.py  ISO_6336.py  LICENSE  README.md  components.py  down_scale.py  dynamic_formulation.py  dynamic_model.py  environment.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  validation_task.md
.spyproject/: workspace.ini
docs/: architecture.md  dataclasses.md  github-project.md  portfolio-positioning.md  roadmap.md  validation.md
drivetrain/: Drivetrain.py  Gear.py  ISO_6336.py  __init__.py  components.py  dynamic_formulation.py
drivetrain/adapters/: __init__.py  kisssoft.py
drivetrain/components/: __init__.py  bearings.py  configs.py  materials.py  racks.py  shafts.py  utils.py
drivetrain/dynamics/: __init__.py  base.py  kahraman_1994.py  lin_parker_1999.py  torsional.py
drivetrain/gears/: __init__.py  carrier.py  gear.py  gear_set.py
drivetrain/iso6336/: __init__.py  benchmarks.py  calculator.py  factors.py
drivetrain/models/: __init__.py  (+2 more)
notes/: FEM_beam.ipynb  Fatigue_Damage_Frequency.ipynb  Kahraman_1994.ipynb  Lin_Parker_99_v2.ipynb  internal_dynamic_factor.ipynb  torsional_2DOF.ipynb
tests/: test_adapters.py  test_components_dataclasses.py  test_dynamics_base.py  test_gear_geometry_reference.py  test_gear_set_speed.py  test_imports.py  test_iso_6336.py  test_kahraman_1994.py  test_lin_parker_1999.py  test_nrel_5mw.py  test_scaling_lookup.py  test_shaft_calculations.py  test_torsional_2dof.py
(+7 files in other folders)
