[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drivetrain-python"
version = "0.1.0"
description = "Python drivetrain modeling tools ported from MATLAB research code."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Geraldo Reboucas" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["drivetrain*"]

[tool.pytest.ini_options]
pythonpath = ["."]
